# cutfig

./: .gitignore  .notes  .travis.yml  CMakeLists.txt  Makefile  cutfig.pro  moc_cutfig.cpp  tst_cutfig_tests.moc  ui_cutfig.h
Tests/: Tests.pro
Tests/cutfig_tests/: cutfig_tests.pro  tst_cutfig_tests.cpp
cmake/: CompilerWarnings.cmake  Conan.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
cutfig/: arrangement.cpp  cutfig.cpp  cutfig.h  cutfig.pro  cutfig.ui  figure.h  ioccupancy.h  main.cpp  occupancy.h  rectangle.cpp  rectangle.h  stencil.cpp  stencil.h  tools.h
src/: CMakeLists.txt  arrangement.cpp  arrangement.h  cutfig.cpp  cutfig.h  figure.h  ioccupancy.h  istencil.h  main.cpp  occupancy.cpp  occupancy.h  point.cpp  point.h  rectangle.cpp  rectangle.h  stencil.cpp  stencil.h
src/nana/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  catch_main.cpp  cutfig_tests.cpp  tests.cpp
